@startuml
'https://plantuml.com/class-diagram

hide members

class User

class Article

class Conference

class JCRRegistry

class Journal

class CategoryRanking

Conference "1" *-- "n" Article
JCRRegistry "1" *-- "n" Article
JCRRegistry "1" *-- "n" CategoryRanking
Journal "1" *-- "n" JCRRegistry
@enduml